--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "svelte": "^3.54.0",
+    "svelte-dnd-action": "^0.9.22",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
